--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
     </style>
 </head>
 <body class="p-4 md:p-8">
-    <div class="container mx-auto grid grid-cols-1 md:grid-cols-3 min-h-screen rounded-lg overflow-hidden">
+    <div class="container mx-auto grid grid-cols-1 md:grid-cols-3 rounded-lg overflow-hidden">
         <!-- Left Column -->
         <div class="left-column p-6 md:p-8 flex flex-col">
             <div class="flex-grow flex flex-col justify-around">
@@ -398,7 +398,7 @@
         </div>
     </div>
 
-    <script>
+    <script type="module">
         const modal = document.getElementById('chatModal');
         const openBtn = document.getElementById('openChatBtn');
         const closeBtn = document.querySelector('.close-button');
