Refactor: Update index.html

--- a/index.html
+++ b/index.html
@@ -358,12 +358,13 @@
         <!-- Left Column -->
         <div class="left-column p-6 md:p-8 flex flex-col">
             <!-- Print-Only Sidebar Header (QR Code) -->
+            <!-- Print-Only Sidebar Header (QR Code) -->
             <div class="print-sidebar-header hidden">
-                <img src="https://api.qrserver.com/v1/create-qr-code/?size=150x150&data=https://ai-resume.com"
+                <img src="https://api.qrserver.com/v1/create-qr-code/?size=150x150&data=https://rexcelsp.github.io/resume"
                     alt="QR Code">
                 <p class="font-bold">View My Live Interactive CV</p>
                 <p>Scan the code or visit the link below for the full experience.</p>
-                <a href="https://ai-resume.com" target="_blank">ai-resume.com</a>
+                <a href="https://rexcelsp.github.io/resume" target="_blank">rexcelsp.github.io/resume</a>
             </div>
 
             <div class="flex-grow flex flex-col justify-around">
